From 2019.11.1
Kaggle Titanic Tutorial (11.1 ~ 12.1)
열혈 C 프로그래밍 (12.23 ~ 1.15, 1.15 ~ 1.30)
파이썬 라이브러리를 활용한 머신러닝 (12.23 ~ 1.21, 1.21 ~ 2.10)
Coursera Deep Learning Specialization course 1 - Andrew Ng (12.23 ~ 1.27)
열혈 자료구조 (1.16 ~ 2.7)
밑바닥부터 시작하는 딥러닝 (1.21 ~ 2.8, 2.15 ~ 3.1)
파이썬 머신러닝 완벽 가이드 (1.23 ~ 2.14, 2.22 ~ 3.7, 7.27 ~ 8.2)
Coursera Deep Learning Specialization course 2 - Andrew Ng (1.27 ~ 2.10)
모두를 위한 딥러닝 시즌2 (1.27 ~ 2.2)
케라스 창시자에게 배우는 딥러닝 (2.6 ~ 2.19)
모두를 위한 강화학습 (2.9 ~ 2.15)
Coursera Deep Learning Specialization course 3 - Andrew Ng (2.11 ~ 2.24)
월간 데이콘 2 천체 유형 분류 대회 (2.11 ~ 2.29) 
T-아카데미 딥러닝을 위한 Tenserflow 2.0 - (2.27 ~ 3.2)
T-아카데미 딥러닝을 위한 Pytorch 활용법 - (3.3 ~ 3.9) 
Coursera Deep Learning Specialization course 4 - Andrew Ng (3.5 ~ 4.5)
Flask Web Tutorial (Project) - (3.12 ~ 3.21)
Web crawler by python - (3.13 ~ 3.13)
Stanford CS231n (3.13 ~ 3.31)
Fast Movie Recommender (Project) - (3.15 ~ 3.21)
T-아카데미 강화학습 입문하기 (3.20 ~ 3.24)
PoAIt (Project) - (3.26 ~ 4.12)
Coursera Deep Learning Specialization course 5 - Andrew Ng (4.5 ~ 5.3)
파이토치 첫걸음 (4.10 ~ 5.10, 8.3 ~)
밑바닥부터 시작하는 딥러닝 2 (4.14 ~ 4.29)
Basic R Programming (4.25 ~ 5.1)
Kaggle Porto Seguro's safe driver prediction Tutorial (5.10 ~ 5.26)
Stanford CS224n (5.11 ~ /)
Research paper implementation - SENet (5.16 ~ 5.17)
Edwith 인공지능 및 기계학습 개론 I (5.26 ~ /)
Research paper implementation - Wide-ResNet (6.10 ~ 6.13)
Udemy the web developer bootcamp (6.22 ~ 7.09)
파이썬과 케라스로 배우는 강화학습 (6.22 ~ /)
skt 행복 인사이트, AngelHack Seoul (6.26 ~ 7.19)
Kotlin Tutorial (6.27 ~ /)
JavaScript, Node.js, AWS 생활코딩 (6.28 ~ 7.12)
42 Seoul (6.29 ~ 7.24)
MySQL, Node.js Express, Passport (7.15 ~ 7.19)
Java Tutorial (7.21 ~ 7.29) 
Kaggle Siim Competition (8.2 ~ )
python Baekjoon algorithm (8.3 ~ )