@@ -1,0 +1,20 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Timer</title>
+        <!-- <link rel = "stylesheet" href="timer.css"/> -->
+    </head>
+    <body>
+        <div class = "js_timer" id = "nowTime">
+            <h1>00:00:00</h1>
+        </div>
+        <form class = "js_setTime">
+            <input type = "number" id = "hour" value="0">시간
+            <input type = "number" id = "min" value="0">분
+            <input type = "number" id = "sec" value="0">초
+            <input type ="button" onclick="start()" value = "Start" id = 'countdown'>
+            <button onClick= "window.location.reload();">Reset Timer</button>
+        </form>
+        <script src="timer.js"></script>
+    </body>
+</html>
