@@ -40,3 +40,4 @@ MySQL, Node.js Express, Passport (7.15 ~ 7.19)
 Java Tutorial (7.21 ~ 7.29) 
 Kaggle Siim Competition (8.2 ~ )
 python Baekjoon algorithm (8.3 ~ )
+Chrome Extension Team Planner (8.3 ~ )
